k8s-deploy-config/k8s_hx_deploy.yml
# Specifies what version of K8s you want to use
apiVersion: v1
# A service is used to expose your Deployment to the external access
kind: Service
metadata:
  name: psi-mi-validator-service
spec:
  ports:
    - port: 31235
      protocol: TCP
      # The port which will be externally exposed. Must be in the range [30000, 32767].
      nodePort: 31235
      # The port on your Deployment which it will expose
      targetPort: 8080
  selector:
    # Selects the disease-portal-client Deployment to attach the Service to
    app: psi-mi-validator
    # Tell K8s this wants to expose an external port
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psi-mi-validator-deployment
spec:
  selector:
    matchLabels:
      app: psi-mi-validator
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: psi-mi-validator
    spec:
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
        - name: psi-mi-validator
          # Pull the image which contains psi-mi-validator webservice and the built assets from EBI's dockerhub
          image: <CONTAINER_IMAGE>
          ports:
            # We are using psi-mi-validator webservice config which serves on port 8080
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      imagePullSecrets:
        # Provided by GitLab, this allows K8s to connect to dockerhub.ebi.ac.uk
        - name: gitlab-registry
