k8s-deploy-config/k8s_deploy.yml
# Specifies what version of K8s you want to use
apiVersion: v1
# A service is used to expose your Deployment to the external access
kind: Service
metadata:
  name: psi-mi-validator-service
spec:
  ports:
    - port: 31235
      protocol: TCP
      # The port on your Deployment which it will expose
      targetPort: 8080
  selector:
    # Selects the disease-portal-client Deployment to attach the Service to
    app: psi-mi-validator
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psi-mi-validator-deployment
spec:
  selector:
    matchLabels:
      app: psi-mi-validator
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: psi-mi-validator
    spec:
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
        - name: psi-mi-validator
          # Pull the image which contains psi-mi-validator webservice and the built assets from EBI's dockerhub
          image: <IMAGE_TAG>
          imagePullPolicy: IfNotPresent
          ports:
            # We are using psi-mi-validator webservice config which serves on port 8080
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
            limits:
              memory: 3Gi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "if [ ! -d /usr/local/tomcat/conf/tomcat-users.xml ] ; then cp /tmp/tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml ; fi ; \
                     if [ ! -d /usr/local/tomcat/webapps/manager/META-INF/context.xml ] ; then cp /tmp/manager-context.xml /usr/local/tomcat/webapps/manager/META-INF/context.xml ; fi ;"
          volumeMounts:
          - name: tomcat-config
            mountPath: /tmp/tomcat-users.xml
            subPath: tomcat-users.xml
          - name: tomcat-config
            mountPath: /tmp/manager-context.xml
            subPath: manager-context.xml
      volumes:
        - name: tomcat-config
          configMap:
            name: tomcat-config
      imagePullSecrets:
        # Provided by GitLab, this allows K8s to connect to dockerhub.ebi.ac.uk
        - name: gitlab-registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psi-mi-validator-ingress
spec:
  rules:
  - http:
      paths:
      - path: /intact/validator
        pathType: Prefix
        backend:
          service:
            name: psi-mi-validator-service
            port:
              number: 31235
